--- a/pagamento/pom.xml
+++ b/pagamento/pom.xml
@@ -20,12 +20,13 @@
   		</plugin>
   	</plugins>
   </build>
+  
+
 
   <dependencies>
   	<dependency>
   		<groupId>org.hsqldb</groupId>
   		<artifactId>hsqldb</artifactId>
-  		<version>2.4.0</version>
   	</dependency>
 	<dependency>
 	    <groupId>io.swagger</groupId>
@@ -45,7 +46,6 @@
 	<dependency>
 		<groupId>org.json</groupId>
 		<artifactId>json</artifactId>
-		<version>20140107</version>
 	</dependency>
 	<dependency>
 		<groupId>com.sun.jersey</groupId>
@@ -58,50 +58,28 @@
 		<version>1.19</version>
 	</dependency>
 	<dependency>
-		<groupId>org.springframework</groupId>
-  		<artifactId>spring-orm</artifactId>
-  		<version>3.0.6.RELEASE</version>
-  	</dependency>
-  	
-  	<dependency>
-  		<groupId>org.springframework</groupId>
-  		<artifactId>spring-tx</artifactId>
-  		<version>3.0.6.RELEASE</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.springframework</groupId>
-  		<artifactId>spring-aspects</artifactId>
-  		<version>3.0.6.RELEASE</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.hibernate</groupId>
-  		<artifactId>hibernate-core</artifactId>
-  		<version>3.6.9.Final</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.aspectj</groupId>
-  		<artifactId>aspectjrt</artifactId>
-  		<version>1.5.4</version>
-  		<scope>runtime</scope>
-  	</dependency>
-        <dependency>
-  		<groupId>org.javassist</groupId>
-  		<artifactId>javassist</artifactId>
-  		<version>3.16.1-GA</version>
-  		<scope>runtime</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.springframework</groupId>
-  		<artifactId>spring-test</artifactId>
-  		<version>3.0.6.RELEASE</version>
-  		<scope>test</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.hsqldb</groupId>
-  		<artifactId>hsqldb</artifactId>
-  		<version>2.4.0</version>
-  		<scope>test</scope>
-  	</dependency>
-	
+                  <groupId>org.springframework.boot</groupId>
+                  <artifactId>spring-boot-starter-web</artifactId>
+            </dependency>
+            <dependency>
+                  <groupId>org.springframework.boot</groupId>
+                  <artifactId>spring-boot-starter-data-jpa</artifactId>
+            </dependency>
+            <dependency>
+                  <groupId>org.springframework.boot</groupId>
+                  <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            </dependency>
+            <dependency>
+                  <groupId>org.springframework.boot</groupId>
+                  <artifactId>spring-boot-starter-test</artifactId>
+                  <scope>test</scope>
+            </dependency>
+
   </dependencies>
+  <parent>
+  	<version>1.5.3.RELEASE</version>
+  	<groupId>org.springframework.boot</groupId>
+  	<artifactId>spring-boot-starter-parent</artifactId>
+  	<relativePath>pom</relativePath>
+  </parent>
 </project>
